--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
 
             <label for="role">Role:</label> -->
             <select id="role" required>
-                <option value="staff">Staff</option>
+                <option value="staff">Customer</option>
                 <!-- <option value="admin">Admin</option> -->
             </select><br>
 
